[BISERVER-11553] - Fixed CGG execution for Windows os